# snake

./: .gitignore  .~lock.dijkstra_grid.xls#  CMakeLists.txt  Makefile  README.md  ai.cpp  ai.h  astyle-cfg.txt  astyle_script.bat  defines.h  dijkstra.cpp  dijkstra.h  dijkstra_grid.xls  eatables.cpp  eatables.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  profiler_script.bat  screen.cpp  screen.h  smart_ai.cpp  smart_ai.h  snake.cbp  snake.cpp  snake.depend  snake.h  snake.layout
img/: dyn_eatable.psd
img/small/: g_bg.c  g_bg.h  m_bg.c  m_bg.h  sprites.c  sprites.h
src/: ai.cpp  ai.h  color.cpp  color.h  defines.h  dijkstra.cpp  dijkstra.h  eatables.cpp  eatables.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  popup.cpp  popup.h  port.h  score_popup.cpp  score_popup.h  smart_ai.cpp  smart_ai.h  snake.cpp  snake.h
src/gba/: port.cpp
src/gba/SuperCrateBox-GBA/: font.cpp
src/sdl/: port.cpp  sdl_port.cpp
toolchains/: gba.cmake
